--- a/index.html
+++ b/index.html
@@ -78,9 +78,9 @@
     <!-- first section -->
     <div class="container-fluid text-light" style="height: 100vh">
       <!-- judul start -->
-      <div class="judul">
-        <h1>OPEN TRIP WITH PNEN</h1>
-        <p>Berpengalaman lebih dari 50+ gunung di Indonesia</p>
+      <div>
+        <h1 class="judul">OPEN TRIP WITH PNEN</h1>
+        <p class="subjudul">Berpengalaman lebih dari 50+ gunung di Indonesia</p>
       </div>
       <!-- judul end -->
 
@@ -100,37 +100,106 @@
       <!-- logo end -->
 
       <!-- card start -->
-      <div class="row text-dark">
-        <div class="col-sm-4 g-4">
-          <div class="card text-bg-secondary">
-            <div class="card-body">
-              <h5 class="card-title text-center">Solo</h5>
-              <p class="card-text text-center">
-                Cocok buat kamu yang statusnya masih jomblo
-              </p>
-              <a href="/asolo/" class="btn btn-dark d-block">Chaw!</a>
+      <div class="row text-center align-items-center mt-2">
+        <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
+          <div
+            class="card text-dark card-has-bg click-col"
+            style="background-image: url('/tools/asolo.jpg')"
+          >
+            <img class="card-img d-none" src="/tools/asolo.jpg" alt="Solo" />
+            <div class="card-img-overlay d-flex flex-column">
+              <div class="card-body">
+                <small class="card-meta">PAKET SOLO</small>
+                <h4 class="card-title mt-0">
+                  <a class="text-dark" href="/asolo/"
+                    >Nikmati paket perjalanan untuk satu orang, cocok buat kamu
+                    yang jomblo!</a
+                  >
+                </h4>
+                <small><i class="far fa-clock"></i> October 15, 2023</small>
+              </div>
+              <div class="card-footer">
+                <div class="media">
+                  <img
+                    class="mr-3 rounded-circle"
+                    src="/tools/logo.jpeg"
+                    alt="Generic placeholder image"
+                    style="max-width: 50px"
+                  />
+                  <div class="media-body">
+                    <h6 class="my-0 text-light d-block">P N E N</h6>
+                    <small class="text-light">Your travel buddy</small>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-        <div class="col-sm-4 g-4">
-          <div class="card text-bg-secondary">
-            <div class="card-body">
-              <h5 class="card-title text-center">Duo</h5>
-              <p class="card-text text-center">
-                Bisa ajak pasangan atau bestie nich xixi
-              </p>
-              <a href="/duo/" class="btn btn-dark d-block">Cabs!</a>
+        <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
+          <div
+            class="card text-dark card-has-bg click-col"
+            style="background-image: url('/tools/duo.jpg')"
+          >
+            <img class="card-img d-none" src="/tools/duo.jpg" alt="Solo" />
+            <div class="card-img-overlay d-flex flex-column">
+              <div class="card-body">
+                <small class="card-meta">PAKET DUO</small>
+                <h4 class="card-title mt-0">
+                  <a class="text-dark" href="/duo/"
+                    >Nikmati paket perjalanan untuk dua orang, cocok buat bareng
+                    pasangan!</a
+                  >
+                </h4>
+                <small><i class="far fa-clock"></i> October 15, 2023</small>
+              </div>
+              <div class="card-footer">
+                <div class="media">
+                  <img
+                    class="mr-3 rounded-circle"
+                    src="/tools/logo.jpeg"
+                    alt="Generic placeholder image"
+                    style="max-width: 50px"
+                  />
+                  <div class="media-body">
+                    <h6 class="my-0 text-light d-block">P N E N</h6>
+                    <small class="text-light">Your travel buddy</small>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
-        <div class="col-sm-4 g-4">
-          <div class="card text-bg-secondary">
-            <div class="card-body">
-              <h5 class="card-title text-center">Squad</h5>
-              <p class="card-text text-center">
-                Traveling sama keluarga ataupun bareng tongkrongan
-              </p>
-              <a href="/squad/" class="btn btn-dark d-block">Gouw!</a>
+        <div class="col-sm-12 col-md-6 col-lg-4 mb-4">
+          <div
+            class="card text-dark card-has-bg click-col"
+            style="background-image: url('/tools/squad.jpg')"
+          >
+            <img class="card-img d-none" src="/tools/squad.jpg" alt="Solo" />
+            <div class="card-img-overlay d-flex flex-column">
+              <div class="card-body">
+                <small class="card-meta">Paket SQUAD</small>
+                <h4 class="card-title mt-0">
+                  <a class="text-dark" href="/squad/"
+                    >Nikmati paket perjalanan untuk empat orang, cocok buat ajak
+                    temen-temen!</a
+                  >
+                </h4>
+                <small><i class="far fa-clock"></i> October 15, 2023</small>
+              </div>
+              <div class="card-footer">
+                <div class="media">
+                  <img
+                    class="mr-3 rounded-circle"
+                    src="/tools/logo.jpeg"
+                    alt="Generic placeholder image"
+                    style="max-width: 50px"
+                  />
+                  <div class="media-body">
+                    <h6 class="my-0 text-light d-block">P N E N</h6>
+                    <small class="text-light">Your travel buddy</small>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
         </div>
@@ -138,7 +207,7 @@
       <!-- card end -->
 
       <!-- sosmed start -->
-      <div class="row text-center align-items-center mt-4">
+      <div class="row text-center align-items-center mt-2">
         <h3>Contact Us</h3>
         <ul>
           <p>Email: travelwithcakrawala.14@gmail.com</p>
