--- a/squad/index.html
+++ b/squad/index.html
@@ -11,7 +11,7 @@
       crossorigin="anonymous"
     />
     <link rel="icon" href="/tools/logo.jpeg" type="image/icon type" />
-    <link rel="stylesheet" href="../style.css" />
+    <link rel="stylesheet" href="squad.css" />
     <title>SQUAD PAGE</title>
   </head>
 
@@ -78,101 +78,162 @@
     <!-- first layout -->
     <div class="container-fluid text-light">
       <!-- card start -->
-      <div class="card text-center mt-2 text-bg-secondary">
-        <div class="card-header">Tersedia!</div>
-        <div class="card-body">
-          <h5 class="card-title">Gunung Gede</h5>
-          <p class="card-text">
-            Sebuah gunung yang berada di provinsi Jawa Barat, terkenal dengan
-            alun-alun Surya Kencana
-          </p>
-          <a
-            href="https://wa.me/6283142554834/?text=Hai Admin Ganteng😍 Aku mau pesan paket Squad dengan destinasi Gunung Gede!"
-            class="btn btn-dark"
-            >Gas order!</a
-          >
+      <div class="container mt-2">
+        <div class="row">
+          <div class="col-lg-4 mb-4">
+            <div class="card">
+              <img
+                src="https://images.unsplash.com/photo-1547140741-00d6fd251528?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mzh8fGZvcmVzdHxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=500&q=60"
+                alt=""
+                class="card-img-top"
+              />
+              <div class="card-body text-light">
+                <h4 class="card-title">Gunung Gede</h4>
+                <p class="card-text">
+                  Sebuah gunung yang berada di provinsi Jawa Barat, terkenal
+                  dengan alun-alun Surya Kencana!
+                </p>
+                <a href="" class="btn btn-outline-light">Gas Order!</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 mb-4">
+            <div class="card">
+              <img
+                src="https://images.unsplash.com/photo-1516214104703-d870798883c5?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=700&q=60"
+                alt="..."
+                class="card-img-top"
+              />
+              <div class="card-body text-light">
+                <h4 class="card-title">Gunung Rinjani</h4>
+                <p class="card-text">
+                  Salah satu dari seven summits Indonesia yang berada di
+                  kepulauan Nusa Tenggara Barat!
+                </p>
+                <a href="" class="btn btn-outline-light">Gas Order!</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 mb-4">
+            <div class="card">
+              <img
+                src="https://images.unsplash.com/photo-1477862096227-3a1bb3b08330?ixlib=rb-1.2.1&auto=format&fit=crop&w=700&q=60"
+                alt=""
+                class="card-img-top"
+              />
+              <div class="card-body text-light">
+                <h4 class="card-title">Gunung Merbabu</h4>
+                <p class="card-text">
+                  Gunung yang memiliki track terpanjang di pulau jawa dan berada
+                  di provinsi jawa timur
+                </p>
+                <a href="" class="btn btn-outline-light">Gas Order!</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 mb-4">
+            <div class="card">
+              <img
+                src="https://images.unsplash.com/photo-1517594632980-535c0c33173d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTR8fHdvb2RzfGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60"
+                alt=""
+                class="card-img-top"
+              />
+              <div class="card-body text-light">
+                <h4 class="card-title">Gunung Lawu</h4>
+                <p class="card-text">
+                  Sebuah gunung yang berada di provinsi Jawa Tengah, terkenal
+                  dengan warung Mbok Yem!
+                </p>
+                <a href="" class="btn btn-outline-light">Gas Order!</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 mb-4">
+            <div class="card">
+              <img
+                src="https://images.unsplash.com/photo-1441974231531-c6227db76b6e?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8Mnx8d29vZHN8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60"
+                alt=""
+                class="card-img-top"
+              />
+              <div class="card-body text-light">
+                <h4 class="card-title">Gunung Guntur</h4>
+                <p class="card-text">
+                  Cocok untuk pendaki pemula karena memiliki jalur pendakian
+                  yang tidak terlalu berat!
+                </p>
+                <a href="" class="btn btn-outline-light">Gas Order!</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 mb-4">
+            <div class="card">
+              <img
+                src="https://images.unsplash.com/photo-1448375240586-882707db888b?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8d29vZHN8ZW58MHx8MHx8fDA%3D&auto=format&fit=crop&w=500&q=60"
+                alt=""
+                class="card-img-top"
+              />
+              <div class="card-body text-light">
+                <h4 class="card-title">Gunung Bromo</h4>
+                <p class="card-text">
+                  Gunung yang memiliki panorama sabana pasir vulkanik yang
+                  sangat indah!
+                </p>
+                <a href="" class="btn btn-outline-light">Gas Order!</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 mb-4">
+            <div class="card">
+              <img
+                src="https://images.unsplash.com/photo-1534269222346-5a896154c41d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MzV8fGZvcmVzdHxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=500&q=60"
+                alt=""
+                class="card-img-top"
+              />
+              <div class="card-body text-light">
+                <h4 class="card-title">Gunung Argopuro</h4>
+                <p class="card-text">
+                  Sebuah gunung yang berada di provinsi Jawa Timur, terkenal
+                  dengan track terpanjang di Jawa!
+                </p>
+                <a href="" class="btn btn-outline-light">Gas Order!</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 mb-4">
+            <div class="card">
+              <img
+                src="https://images.unsplash.com/photo-1542202229-7d93c33f5d07?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8Zm9yZXN0fGVufDB8fDB8fHww&auto=format&fit=crop&w=500&q=60"
+                alt=""
+                class="card-img-top"
+              />
+              <div class="card-body text-light">
+                <h4 class="card-title">Gunung Semeru</h4>
+                <p class="card-text">
+                  Salah satu dari seven summits Indonesia, Gunung tertinggi yang
+                  terletak di pulau Jawa!
+                </p>
+                <a href="" class="btn btn-outline-light">Gas Order!</a>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-4 mb-4">
+            <div class="card">
+              <img
+                src="https://images.unsplash.com/photo-1440342359743-84fcb8c21f21?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8MTF8fGZvcmVzdHxlbnwwfHwwfHx8MA%3D%3D&auto=format&fit=crop&w=500&q=60"
+                alt=""
+                class="card-img-top"
+              />
+              <div class="card-body text-light">
+                <h4 class="card-title">Gunung Prau</h4>
+                <p class="card-text">
+                  Gunung yang memiliki sunrise camp terbaik dengan view Sindoro
+                  dan Sumbing!
+                </p>
+                <a href="" class="btn btn-outline-light">Gas Order!</a>
+              </div>
+            </div>
+          </div>
         </div>
-        <div class="card-footer text-body-light">Rp. 1.100.000,00/pack</div>
-      </div>
-      <div class="card text-center mt-4 text-bg-secondary">
-        <div class="card-header">Tersedia!</div>
-        <div class="card-body">
-          <h5 class="card-title">Gunung Rinjani</h5>
-          <p class="card-text">
-            Salah satu dari seven summits Indonesia yang berada di kepulauan
-            Nusa Tenggara Barat
-          </p>
-          <a
-            href="https://wa.me/6283142554834/?text=Hai Admin Ganteng😍 Aku mau pesan paket Squad dengan destinasi Gunung Rinjani!"
-            class="btn btn-dark"
-            >Gas order!</a
-          >
-        </div>
-        <div class="card-footer text-body-light">Rp. 3.750.000,00/pack</div>
-      </div>
-      <div class="card text-center mt-4 text-bg-secondary">
-        <div class="card-header">Tersedia!</div>
-        <div class="card-body">
-          <h5 class="card-title">Gunung Merbabu</h5>
-          <p class="card-text">
-            Gunung yang memiliki track terpanjang di pulau jawa dan berada di
-            provinsi jawa timur
-          </p>
-          <a
-            href="https://wa.me/6283142554834/?text=Hai Admin Ganteng😍 Aku mau pesan paket Squad dengan destinasi Gunung Merbabu!"
-            class="btn btn-dark"
-            >Gas order!</a
-          >
-        </div>
-        <div class="card-footer text-body-light">Rp. 2.000.000,00/pack</div>
-      </div>
-      <div class="card text-center mt-4 text-bg-secondary">
-        <div class="card-header">Tersedia!</div>
-        <div class="card-body">
-          <h5 class="card-title">Gunung Lawu</h5>
-          <p class="card-text">
-            Sebuah gunung yang berada di provinsi Jawa Tengah, terkenal dengan
-            warung Mbok Yem
-          </p>
-          <a
-            href="https://wa.me/6283142554834/?text=Hai Admin Ganteng😍 Aku mau pesan paket Squad dengan destinasi Gunung Lawu!"
-            class="btn btn-dark"
-            >Gas order!</a
-          >
-        </div>
-        <div class="card-footer text-body-light">Rp. 1.700.000,00/pack</div>
-      </div>
-      <div class="card text-center mt-4 text-bg-secondary">
-        <div class="card-header">Tersedia!</div>
-        <div class="card-body">
-          <h5 class="card-title">Gunung Guntur</h5>
-          <p class="card-text">
-            Cocok untuk pendaki pemula karena memiliki jalur pendakian yang
-            tidak terlalu berat
-          </p>
-          <a
-            href="https://wa.me/6283142554834/?text=Hai Admin Ganteng😍 Aku mau pesan paket Squad dengan destinasi Gunung Guntur!"
-            class="btn btn-dark"
-            >Gas order!</a
-          >
-        </div>
-        <div class="card-footer text-body-light">Rp. 1.400.000,00/pack</div>
-      </div>
-      <div class="card text-center mt-4 text-bg-secondary">
-        <div class="card-header">Tersedia!</div>
-        <div class="card-body">
-          <h5 class="card-title">Gunung Bromo</h5>
-          <p class="card-text">
-            Gunung yang memiliki panorama sabana pasir vulkanik yang sangat
-            indah dan seringkali ramai oleh para wisatawan asing
-          </p>
-          <a
-            href="https://wa.me/6283142554834/?text=Hai Admin Ganteng😍 Aku mau pesan paket Squad dengan destinasi Gunung Bromo!"
-            class="btn btn-dark"
-            >Gas order!</a
-          >
-        </div>
-        <div class="card-footer text-body-light">Rp. 3.500.000,00/pack</div>
       </div>
       <!-- card end -->
 
